5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1859_1296.log
== TEST (2019-06-26 14:57:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.t
print("centurion: ", round(quant[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if carro[0] == min(carros):
-- ERROR:
File "XXXX", line 10
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:58:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.t
print("centurion: ", round(quant[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if carro[0] == min(carros):
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:59:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.t
print("centurion: ", round(quant[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if carro[0] == min(carros):
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:00:47) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.t
print("centurion: ", round(quant[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if carro[0] == min(carros):
	print()
-- EXECUTION TIME:
1.2135
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/1296/main.py", line 5, in <module>
    quant = quant.t
AttributeError: 'numpy.ndarray' object has no attribute 't'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:04:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
print("centurion: ", round(quant[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if carro[0] == min(quant):
	print(centurion)
elif carro[1] == min(quant):
	print(tribune)
else:
	print(senator)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:05:47) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
print("centurion: ", round(quant[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if quant[0] == min(quant):
	print(centurion)
elif quant[1] == min(quant):
	print(tribune)
else:
	print(senator)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:07:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
print("centurion: ", round(quant[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if quant[0] == min(quant):
	print(centurion)
elif quant[1] == min(quant):
	print(tribune)
else:
	print(senator)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:07:23) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
print("centurion: ", round(quant[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if quant[0] == min(quant):
	print(centurion)
elif quant[1] == min(quant):
	print(tribune)
else:
	print(senator)
-- EXECUTION TIME:
1.05311
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/1296/main.py", line 14, in <module>
    print(senator)
NameError: name 'senator' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:09:03) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
solucao = dot(inv(carros), quant)
print("centurion: ", round(quant[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if quant[0] == min(quant):
	print(centurion)
elif quant[1] == min(quant):
	print(tribune)
else:
	print(senator)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:11:17) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
solucao = dot(carros, quant)
print("centurion: ", round(qu[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if quant[0] == min(quant):
	print(centurion)
elif quant[1] == min(quant):
	print(tribune)
else:
	print(senator)
-- EXECUTION TIME:
1.17538
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/1296/main.py", line 7, in <module>
    print("centurion: ", round(qu[0], 0))
NameError: name 'qu' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:12:42) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
solucao = dot(carros, quant)
print("centurion: ", round(carro[0], 0))
print("tribune: ", round(carro[1], 0))
print("senator: ", round(carro[2], 0))
if carro[0] == min(quant):
	print(centurion)
elif carro[1] == min(quant):
	print(tribune)
else:
	print(senator)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:13:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
solucao = dot(carros, quant)
print("centurion: ", round(carro[0], 0))
print("tribune: ", round(carro[1], 0))
print("senator: ", round(carro[2], 0))
if carro[0] == min(quant):
	print(centurion)
elif carro[1] == min(quant):
	print(tribune)
else:
	print(senator)
-- EXECUTION TIME:
0.794579
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/1296/main.py", line 7, in <module>
    print("centurion: ", round(carro[0], 0))
NameError: name 'carro' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:14:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
solucao = dot(carros, quant)
print("centurion: ", round(carros[0], 0))
print("tribune: ", round(carros[1], 0))
print("senator: ", round(carros[2], 0))
if carros[0] == min(quant):
	print(centurion)
elif carros[1] == min(quant):
	print(tribune)
else:
	print(senator)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:14:27) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
solucao = dot(carros, quant)
print("centurion: ", round(carros[0], 0))
print("tribune: ", round(carros[1], 0))
print("senator: ", round(carros[2], 0))
if carros[0] == min(quant):
	print(centurion)
elif carros[1] == min(quant):
	print(tribune)
else:
	print(senator)
-- EXECUTION TIME:
1.00207
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/1296/main.py", line 7, in <module>
    print("centurion: ", round(carros[0], 0))
TypeError: type list doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:26:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
solucao = dot(carros, quant)
print("centurion: ", round(quant[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if quant[0] == min(carros):
	print(centurion)
elif quant[1] == min(carros):
	print(tribune)
else:
	print(senator)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:28:01) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
solucao = dot(carros, quant)
print("centurion: ", round(quant[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if quant[0] == min(quant):
	print(centurion)
elif quant[1] == min(quant):
	print(tribune)
else:
	print(senator)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:29:17) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
solucao = dot(carros, quant)
print("centurion: ", round(quant[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if quant[0] == min(quant):
	print(centurion)
elif quant[1] == min(quant):
	print(tribune)
else:
	print(senator)
-- EXECUTION TIME:
1.3034
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/1296/main.py", line 15, in <module>
    print(senator)
NameError: name 'senator' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:31:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
solucao = dot(carros, quant)
print("centurion: ", round(quant[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if quant[0] == min(quant):
	print(centurion)
elif quant[1] == min(quant):
	print(tribune)
else:
	print(senator)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:33:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
solucao = dot(carros, quant)
print("centurion: ", round(quant[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if quant[0] == min(quant):
	print(centurion)
elif quant[1] == min(quant):
	print(tribune)
else:
	print(senator)
-- EXECUTION TIME:
0.87727
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/1296/main.py", line 15, in <module>
    print(senator)
NameError: name 'senator' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:33:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
solucao = dot(carros, quant)
print("centurion: ", round(quant[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if quant[0] == min(carros):
	print(centurion)
elif quant[1] == min(carros):
	print(tribune)
else:
	print(senator)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:34:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
solucao = dot(carros, quant)
print("centurion: ", round(quant[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if quant[0] == min(carros):
	print(centurion)
elif quant[1] == min(carros):
	print(tribune)
else:
	print(senator)
-- EXECUTION TIME:
1.05903
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/1296/main.py", line 10, in <module>
    if quant[0] == min(carros):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:41:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
solucao = dot(carros, quant)
print("centurion: ", round(quant[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if quant[0] == min(quant):
	print(centurion)
elif quant[1] == min(quant):
	print(tribune)
else:
	print(senator)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:42:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
carros = ([[8, 10, 16], [2,3,5], [1, 2, 3]])
quant = array(eval(input("m: ")))
quant = quant.T
solucao = dot(carros, quant)
print("centurion: ", round(quant[0], 0))
print("tribune: ", round(quant[1], 0))
print("senator: ", round(quant[2], 0))
if quant[0] == min(quant):
	print(centurion)
elif quant[1] == min(quant):
	print(tribune)
else:
	print(senator)
-- EXECUTION TIME:
1.29238
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/1296/main.py", line 15, in <module>
    print(senator)
NameError: name 'senator' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
